--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="blogContainer wrapper">
                     <div id="blog1" class="blogElement">
                         
-                        <img src="https://www.placekitten.com/300/300" align="left">
+                        <img src="resource/300.jpg" align="left">
                         
                         <div class="blogText">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce condimentum neque vitae nisl pharetra tincidunt. Maecenas felis massa, auctor a lacinia et, volutpat eu lorem. In mattis nisi at mauris feugiat semper. Nulla facilisi. Nam vel purus sodales arcu eleifend hendrerit quis eu nunc. Nullam cursus, enim vitae euismod sollicitudin, neque diam finibus erat, vel consectetur urna sem in leo. Donec varius ut dui sit amet euismod. Donec bibendum pulvinar lectus, vel bibendum nisl finibus ut. Fusce eget dui vestibulum, viverra est vel, dapibus orci. In id consequat tellus.
@@ -45,7 +45,7 @@
 
                     <div id="blog2" class="blogElement">
 
-                            <img src="https://www.placekitten.com/300/300" align="right">
+                            <img src="resource/300.jpg" align="right">
 
                             <div class="blogText">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce condimentum neque vitae nisl pharetra tincidunt. Maecenas felis massa, auctor a lacinia et, volutpat eu lorem. In mattis nisi at mauris feugiat semper. Nulla facilisi. Nam vel purus sodales arcu eleifend hendrerit quis eu nunc. Nullam cursus, enim vitae euismod sollicitudin, neque diam finibus erat, vel consectetur urna sem in leo. Donec varius ut dui sit amet euismod. Donec bibendum pulvinar lectus, vel bibendum nisl finibus ut. Fusce eget dui vestibulum, viverra est vel, dapibus orci. In id consequat tellus.
