--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="mainPage wrapper">
 
             <div class="header wrapper">
-                <div class="heading">Fantasy Innlandet</div>
+                <div class="heading"><img src="resource/header.jpg" width="1541px"></div>
             </div>
 
             <div class="mainContent wrapper">
@@ -58,7 +58,7 @@
 
                 </div>
                 
-                <div class="embed twitter">
+                <div id="twitterWindow" class="embed twitter">
                         <a class="twitter-timeline" data-width="15vw" data-height="700" href="https://twitter.com/FInnlandet?ref_src=twsrc%5Etfw">Tweets by FInnlandet</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
