--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="blogContainer wrapper">
+                <div id="blogContainer" class="blogContainer wrapper">
                     <div id="blog1" class="blogElement">
                         
                         <img src="resource/300.jpg" align="left">
