Add link & logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="resource/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    
     <script src="main.js"></script>
 </head>
 <body onload="init()">
@@ -23,7 +24,7 @@
                 <div id="navbar">
                     <div class="table">
                         <ul id="horizontal-list">
-                        <li><a href="#">ITEM 1</a></li>
+                        <li><a href="https://www.breddefantasy.com/"><img class="navbarImg" src="resource/bredde.png"></a></li>
                         <li><a href="#">ITEM 2</a></li>
                         <li><a href="#">ITEM 3</a></li>
                         <li><a href="#">ITEM 4</a></li>
@@ -42,7 +43,7 @@
             
             <div class="footer wrapper">
                 <div class="left footerBox">
-                    LEFT
+                        <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Ffantasyinnlandet%2F&width=450&layout=standard&action=like&size=small&show_faces=true&share=true&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 </div>
                 <div class="middle footerBox">
                     CENTER
