--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <div class="table">
                         <ul id="horizontal-list">
                         <li><a href="https://www.breddefantasy.com/"><img class="navbarImg" src="resource/bredde.png"></a></li>
-                        <li><a href="#">ITEM 2</a></li>
-                        <li><a href="#">ITEM 3</a></li>
+                        <li><a href="#">FotballTabeller</a></li>
+                        <li><a href="#">SpillerStatistikk</a></li>
                         <li><a href="#">ITEM 4</a></li>
                         </ul>
                     </div>
