--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
                 </div>
 
-                <div id="matchResults" class="hidden">
+                <div id="matchResults" class="results hidden">
                     <table id="resultsTable">
 
                     </table>
                 </div>
     
-                <div id="playerRoster" class="hidden">
+                <div id="playerRoster" class="roster hidden">
                     <table id="rosterTable">
                         
                     </table>
