--- a/index.html
+++ b/index.html
@@ -48,14 +48,189 @@
                 <div id="blogContainer" class="blogContainer wrapper">
                     
                     <div class="tables wrapper" id="tablesContainer">
-                        <!-- <div id="table1"></div>
-                        <div id="table2"></div> -->
+                        <div id="table1" class="resultsTable">AVDELING
+                            <table>
+                                <tr>
+                                    <th></th>
+                                    <th>Lag</th>
+                                    <th>S</th>
+                                    <th>P</th>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>                                
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Brummunddal 2</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div id="table2" class="resultsTable">AVDELING
+                                <table>
+                                        <tr>
+                                            <th></th>
+                                            <th>Lag</th>
+                                            <th>S</th>
+                                            <th>P</th>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>                                
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Brummunddal 2</td>
+                                            <td>0</td>
+                                            <td>0</td>
+                                        </tr>
+                                    </table>
+                        </div>
                     </div>
 
                     <div class="newsHeaders wrapper">
-                        <div id="newsElement1"></div>
-                        <div id="newsElement2"></div>
-                        <div id="newsElement3"></div>
+                        <div id="newsElement1" class="newsElement">
+                            <div class="newsElementHeader">TEST</div>
+                            <img src="resource/pootball.jpg">
+                            <div class="newsTextPreview">Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal </div>
+                        </div>
+                        <div id="newsElement2" class="newsElement">
+                            <div class="newsElementHeader">TEST</div>
+                            <img src="resource/futebal.jpg">
+                            <div class="newsTextPreview">Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal </div>
+                        </div>
+                        <div id="newsElement3" class="newsElement">
+                            <div class="newsElementHeader">TEST</div>
+                            <img src="resource/phootball.jpg">
+                            <div class="newsTextPreview">Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal Football Futebal </div>
+
+                        </div>
                     </div>
 
                 </div>
