--- a/index.html
+++ b/index.html
@@ -236,7 +236,23 @@
                 </div>
 
                 <div id="newsWindow" class="news hidden wrapper">
+                    <div id="A1" class="newsHolder wrapper" articleID="test1" onclick="open_article(this)">
+                        <img src="https://placekitten.com/800/400"/>
+                        <div class="newsHeader"></div>
+                        <div class="newsPreview"></div>
+                    </div>
 
+                    <div id="A2" class="newsHolder wrapper" articleID="test2" onclick="open_article(this)">
+                        <img src="https://placekitten.com/800/400"/>
+                        <div class="newsHeader"></div>
+                        <div class="newsPreview"></div>
+                    </div>
+
+                    <div id="A3" class="newsHolder wrapper" articleID="test3" onclick="open_article(this)">
+                        <img src="https://placekitten.com/800/400"/>
+                        <div class="newsHeader"></div>
+                        <div class="newsPreview"></div>
+                    </div>
                 </div>
 
                 <div id="matchResults" class="statistics hidden wrapper">
